src/cuda/model_single.rs

/* automatically generated by rust-bindgen 0.60.1 */

#[doc = " The (u,v,w) coordinates of a baseline. They are in units of metres."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct UVW {
    pub u: f32,
    pub v: f32,
    pub w: f32,
}
#[test]
fn bindgen_test_layout_UVW() {
    assert_eq!(
        ::std::mem::size_of::<UVW>(),
        12usize,
        concat!("Size of: ", stringify!(UVW))
    );
    assert_eq!(
        ::std::mem::align_of::<UVW>(),
        4usize,
        concat!("Alignment of ", stringify!(UVW))
    );
    fn test_field_u() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<UVW>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).u) as usize - ptr as usize
            },
            0usize,
            concat!("Offset of field: ", stringify!(UVW), "::", stringify!(u))
        );
    }
    test_field_u();
    fn test_field_v() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<UVW>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).v) as usize - ptr as usize
            },
            4usize,
            concat!("Offset of field: ", stringify!(UVW), "::", stringify!(v))
        );
    }
    test_field_v();
    fn test_field_w() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<UVW>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).w) as usize - ptr as usize
            },
            8usize,
            concat!("Offset of field: ", stringify!(UVW), "::", stringify!(w))
        );
    }
    test_field_w();
}
#[doc = " The LMN coordinates of a sky-model component (prepared for application in the"]
#[doc = "RIME)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LmnRime {
    pub l: f32,
    pub m: f32,
    pub n: f32,
}
#[test]
fn bindgen_test_layout_LmnRime() {
    assert_eq!(
        ::std::mem::size_of::<LmnRime>(),
        12usize,
        concat!("Size of: ", stringify!(LmnRime))
    );
    assert_eq!(
        ::std::mem::align_of::<LmnRime>(),
        4usize,
        concat!("Alignment of ", stringify!(LmnRime))
    );
    fn test_field_l() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<LmnRime>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).l) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(LmnRime),
                "::",
                stringify!(l)
            )
        );
    }
    test_field_l();
    fn test_field_m() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<LmnRime>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).m) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(LmnRime),
                "::",
                stringify!(m)
            )
        );
    }
    test_field_m();
    fn test_field_n() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<LmnRime>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).n) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(LmnRime),
                "::",
                stringify!(n)
            )
        );
    }
    test_field_n();
}
#[doc = " Parameters describing a Gaussian (also applicable to shapelets)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GaussianParams {
    pub maj: f32,
    pub min: f32,
    pub pa: f32,
}
#[test]
fn bindgen_test_layout_GaussianParams() {
    assert_eq!(
        ::std::mem::size_of::<GaussianParams>(),
        12usize,
        concat!("Size of: ", stringify!(GaussianParams))
    );
    assert_eq!(
        ::std::mem::align_of::<GaussianParams>(),
        4usize,
        concat!("Alignment of ", stringify!(GaussianParams))
    );
    fn test_field_maj() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<GaussianParams>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).maj) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(GaussianParams),
                "::",
                stringify!(maj)
            )
        );
    }
    test_field_maj();
    fn test_field_min() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<GaussianParams>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).min) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(GaussianParams),
                "::",
                stringify!(min)
            )
        );
    }
    test_field_min();
    fn test_field_pa() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<GaussianParams>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pa) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(GaussianParams),
                "::",
                stringify!(pa)
            )
        );
    }
    test_field_pa();
}
#[doc = " Parameters describing a shapelet coefficient."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ShapeletCoeff {
    pub n1: usize,
    pub n2: usize,
    pub value: f32,
}
#[test]
fn bindgen_test_layout_ShapeletCoeff() {
    assert_eq!(
        ::std::mem::size_of::<ShapeletCoeff>(),
        24usize,
        concat!("Size of: ", stringify!(ShapeletCoeff))
    );
    assert_eq!(
        ::std::mem::align_of::<ShapeletCoeff>(),
        8usize,
        concat!("Alignment of ", stringify!(ShapeletCoeff))
    );
    fn test_field_n1() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ShapeletCoeff>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).n1) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(ShapeletCoeff),
                "::",
                stringify!(n1)
            )
        );
    }
    test_field_n1();
    fn test_field_n2() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ShapeletCoeff>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).n2) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(ShapeletCoeff),
                "::",
                stringify!(n2)
            )
        );
    }
    test_field_n2();
    fn test_field_value() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ShapeletCoeff>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).value) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(ShapeletCoeff),
                "::",
                stringify!(value)
            )
        );
    }
    test_field_value();
}
#[doc = " (u,v) coordinates for a shapelet. W isn't used, so we're a bit more efficient"]
#[doc = " by not using UVW."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ShapeletUV {
    pub u: f32,
    pub v: f32,
}
#[test]
fn bindgen_test_layout_ShapeletUV() {
    assert_eq!(
        ::std::mem::size_of::<ShapeletUV>(),
        8usize,
        concat!("Size of: ", stringify!(ShapeletUV))
    );
    assert_eq!(
        ::std::mem::align_of::<ShapeletUV>(),
        4usize,
        concat!("Alignment of ", stringify!(ShapeletUV))
    );
    fn test_field_u() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ShapeletUV>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).u) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(ShapeletUV),
                "::",
                stringify!(u)
            )
        );
    }
    test_field_u();
    fn test_field_v() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<ShapeletUV>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).v) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(ShapeletUV),
                "::",
                stringify!(v)
            )
        );
    }
    test_field_v();
}
#[doc = " A Jones matrix, single precision. The floats are unpacked into real and imag"]
#[doc = " components because complex numbers don't traverse the FFI boundary well."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JonesF32 {
    pub xx_re: f32,
    pub xx_im: f32,
    pub xy_re: f32,
    pub xy_im: f32,
    pub yx_re: f32,
    pub yx_im: f32,
    pub yy_re: f32,
    pub yy_im: f32,
}
